2012-01-29 Andreas Otto <andreas@otto-hanika.de>
	* [~BUG] Fixes #33291. Some parts of the first patch did not apply. Credits go to Francois Suter for investigating the issue and providing patches.[~BUG] Fixes #33291. Some parts of the first patch did not apply. Credits go to Francois Suter for investigating the issue and providing patches.

2012-01-22 Andreas Otto <andreas@otto-hanika.de>
	* [~FEATURE] Fixes #3082. Hooks after importing/exporting. Credits go to Francois Suter for providing patches.
	* Release version 3.3.13.

2012-01-21 Andreas Otto <andreas@otto-hanika.de>
	* [~BUG] Fixes #27683. Add langDatabaseOverlay to documentation.
	* [~BUG] Fixes #33224. Direction cleanup task: add downloads directory. Credits go to Francois Suter for investigating the issue and providing patches.
	* [~BUG] Fixes #33259. Wrong mail actions in automated import process. Credits go to Francois Suter for investigating the issue and providing patches.
	* [~BUG] Fixes #33260. Wrong FTP interactions in import process. Credits go to Francois Suter for investigating the issue and providing patches.
	* [~BUG] Fixes #33291, Fixes #12047, Fixes #2592. Adapt BE modules to new TYPO3 skin. Credits go to Francois Suter for investigating the issue and providing patches.
	* [~BUG] Replace default icon of task module.

2012-01-09 Daniel Zielinski <development@loctimize.com>
	* Changed version to 3.3.11

2011-12-11 Andreas Otto <andreas@otto-hanika.de>
	* [~BUG] Fixes #31864. Insufficient test for detecting RTE fields. Credits go to Francois Suter for investigating the issue and providing patches.
	* [+FEATURE] Fixes #32379. Add system to clean up old files. Credits go to Francois Suter for investigating the issue and providing patches.
	* [~BUG] Fixes #32153. Add FTP support to CLI import script. Credits go to Francois Suter for investigating the issue and providing patches.