@@ -46,6 +46,7 @@
 			<label index="export.xml.no_check_xml.title">Do not check XML</label>
 			<label index="export.xml.checkXml.title">Check XML</label>
 			<label index="export.xml.checkUtf8.title">Check UTF-8</label>
+			<label index="export.xml.ftp.title">Send to FTP server</label>
 			<label index="export.process.error.empty.message">Empty element</label>
 			<label index="export.process.error.invalid.message">Detected invalid characters in element</label>
 			<label index="export.process.duplicate.message">Contents already exported for translation! </label>
@@ -54,6 +55,12 @@
 			<label index="export.overview.type.label">Type</label>
 			<label index="export.overview.targetlanguage.label">Target language</label>
 			<label index="export.overview.filename.label">Filename</label>
+			<label index="export.ftp.error">FTP upload failed</label>
+			<label index="export.ftp.success">FTP upload successful</label>
+			<label index="export.ftp.success.detail">Export successfully uploaded to %s on FTP server</label>
+			<label index="export.ftp.connection_failed">Failed to connect to FTP server</label>
+			<label index="export.ftp.login_failed">Could not log into FTP server with user %s</label>
+			<label index="export.ftp.upload_failed">Could not upload file %1$s to FTP server in path %2$s</label>
 			<label index="import.xml.headline.title">Import</label>
 			<label index="import.xml.old-format.title">Import old format (v2)</label>
 			<label index="import.xml.old-format.message">Import uses the old format without pageGrp element and checks!</label>
@@ -78,6 +85,14 @@
 			<label index="render_overview.clickedit.message">Click to edit</label>
 			<label index="render_overview.clicklocalize.message">Click to localize</label>
 			<label index="l10nmgr.documentation.title">Documentation</label>
+			<label index="email.suject.msg">Translation job (%1$s-%2$s) from TYPO3 site: %3$s</label>
+			<label index="email.greeting.msg">Dear translator or translation project manager,</label>
+			<label index="email.new_translation_job.msg">There is a new translation job (%1$s-%2$s) available from TYPO3 site at %3$s.</label>
+			<label index="email.info.msg">For information how to download/translate this file please refer to the documentation.</label>
+			<label index="email.info.import.msg">The translated XML file can be imported using the TYPO3 Localization Manager (l10nmgr).</label>
+			<label index="email.goodbye.msg">Kind regards,</label>
+			<label index="email.info.exportef_file.msg">Exported file:</label>
+			<label index="email.new_translation_job_attached.msg">Attached is an XML file for translation (%1$s-%2$s) from TYPO3 site at %3$s.</label>
 		</languageKey>
 		<languageKey index="de" type="array">
 			<label index="general.action.refresh.button.title">Aktualisieren</label>
